[project]
name = "rix-v3"
version = "0.1.0"
description = "☄️ Flexible Cloud written in Python"
authors = [{name = "giorka", email = "144945713+giorka@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["fastapi (>=0.115.11,<0.116.0)"]

[project.urls]
"Homepage" = "https://github.com/giorka/rix-v3"
"Bug Reports" = "https://github.com/giorka/rix-v3/issues"
"Source" = "https://github.com/giorka/rix-v3"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["UP037"]

[tool.ruff.lint.flake8-copyright]
author = "giorka"

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "first-party",
    "local-folder",
    "third-party",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
